--- a/tasks/wallet.yml
+++ b/tasks/wallet.yml
@@ -4,6 +4,6 @@
   ansible.builtin.copy:
     content: "{{ neofs_http__wallet }}"
     dest: "{{ neofs_http__wallet_path }}"
-    owner: "{{ neofs_http__user }}"
+    owner: 'root'
     group: "{{ neofs_http__group }}"
-    mode: '0660'
+    mode: '0640'
