--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,7 +2,7 @@
 
 - name: Restart NeoFS HTTP service
   ansible.builtin.systemd:
-    name: "neofs-http{{ neofs_http__instance }}.service"
+    name: 'neofs-http.service'
     state: 'restarted'
     enabled: yes
     daemon_reload: yes
