--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,24 +1,12 @@
 ---
 
-- name: Create NeoFS HTTP group
-  ansible.builtin.group:
-    name: "{{ neofs_http__group }}"
-    system: yes
+- ansible.builtin.include_tasks: 'user.yml'
 
-- name: Create NeoFS HTTP user
-  ansible.builtin.user:
-    name: "{{ neofs_http__user }}"
-    group: "{{ neofs_http__group }}"
-    password: '*'
-    shell: '/usr/sbin/nologin'
-    home: "{{ neofs_http__conf_dir }}"
-    system: yes
-    skeleton: no
 
 - name: Create configuration directory parent
   ansible.builtin.file:
     state: directory
-    path: "{{ neofs_http__conf_dir | realpath | dirname }}"
+    path: '{{ neofs_http__conf_dir | realpath | dirname }}'
     owner: 'root'
     group: 'root'
     mode: '0755'
@@ -26,17 +14,17 @@
 - name: Create configuration directory
   ansible.builtin.file:
     state: directory
-    path: "{{ neofs_http__conf_dir }}"
+    path: '{{ neofs_http__conf_dir }}'
     owner: 'root'
-    group: "{{ neofs_http__group }}"
+    group: '{{ neofs_http__group }}'
     mode: '0750'
 
 - name: Copy NeoFS HTTP config
   ansible.builtin.template:
-    src: "config.yaml.j2"
-    dest: "{{ neofs_http__conf_dir }}/config.yaml"
+    src: 'config.yaml.j2'
+    dest: '{{ neofs_http__conf_dir }}/config.yaml'
     owner: 'root'
-    group: "{{ neofs_http__group }}"
+    group: '{{ neofs_http__group }}'
     mode: '0640'
   notify: [ 'Restart NeoFS HTTP service' ]
 
@@ -44,10 +32,10 @@
 
 - ansible.builtin.include_tasks: 'binary.yml'
 
-- name: Copy regular systemd unit
+- name: Copy systemd unit
   ansible.builtin.template:
-    src: "neofs-http.service.j2"
-    dest: "/etc/systemd/system/neofs-http{{ neofs_http__instance }}.service"
+    src: 'neofs-http.service.j2'
+    dest: '/etc/systemd/system/neofs-http.service'
   notify: [ 'Restart NeoFS HTTP service' ]
 
 - name: Force debops.ferm run
@@ -55,5 +43,5 @@
     name: debops.debops.ferm
   vars:
     ferm__dependent_rules:
-      - "{{ neofs_http__ferm__dependent_rules }}"
+      - '{{ neofs_http__ferm__dependent_rules }}'
   when: neofs_http__debops_ferm_import | bool
