--- a/tasks/wallet.yml
+++ b/tasks/wallet.yml
@@ -2,8 +2,8 @@
 
 - name: Copy NeoFS HTTP wallet
   ansible.builtin.copy:
-    content: "{{ neofs_http__wallet }}"
-    dest: "{{ neofs_http__wallet_path }}"
+    content: '{{ neofs_http__wallet_content }}'
+    dest: '{{ neofs_http__wallet_path }}'
     owner: 'root'
-    group: "{{ neofs_http__group }}"
+    group: '{{ neofs_http__group }}'
     mode: '0640'
