--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,27 +13,27 @@ neofs_http__wallet_content: ''
 neofs_http__wallet_path: '{{ neofs_http__conf_dir }}/wallet.json'
 
 neofs_http__http_address: 'localhost'
-neofs_http__http_port: '8888'
+neofs_http__http_port: 8888
 neofs_http__http_allow: []
 neofs_http__http_group_allow: []
 neofs_http__http_host_allow: []
 
 neofs_http__prometheus_enabled: False
 #neofs_http__prometheus_address: 'localhost'
-#neofs_http__prometheus_port: '5662'
+#neofs_http__prometheus_port: 5662
 #neofs_http__prometheus_allow: []
 #neofs_http__prometheus_group_allow: []
 #neofs_http__prometheus_host_allow: []
 
 neofs_http__pprof_enabled: False
 #neofs_http__pprof_address: 'localhost'
-#neofs_http__pprof_port: '5661'
+#neofs_http__pprof_port: 5661
 #neofs_http__pprof_allow: []
 #neofs_http__pprof_group_allow: []
 #neofs_http__pprof_host_allow: []
 
 
-neofs_http__default_config:
+neofs_http__raw_config:
   logger:
     level: info
   wallet:
@@ -47,11 +47,13 @@ neofs_http__default_config:
       priority: 1
       weight: 1
 
+neofs_http__default_config: []
 neofs_http__config: []
 neofs_http__group_config: []
 neofs_http__host_config: []
 
 neofs_http__combined_config: '{{ 
+  neofs_http__default_config +
   neofs_http__config + 
   neofs_http__group_config +
   neofs_http__host_config }}'
