--- a/tasks/wallet.yml
+++ b/tasks/wallet.yml
@@ -2,8 +2,9 @@
 
 - name: Copy NeoFS HTTP wallet
   ansible.builtin.copy:
-    content: '{{ neofs_http__wallet_content }}'
+    content: '{{ neofs_http__wallet_content | to_nice_json(ensure_ascii=False) }}'
     dest: '{{ neofs_http__wallet_path }}'
     owner: 'root'
     group: '{{ neofs_http__group }}'
     mode: '0640'
+  notify: [ 'Restart NeoFS HTTP service' ]
