update http-gw config
Signed-off-by: anatoly@nspcc.ru <anatoly@nspcc.ru>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 
-neofs_http__version: '0.22.0'
+neofs_http__version: '0.23.0'
 neofs_http__bin_url: 'https://github.com/nspcc-dev/neofs-http-gw/releases/download/v{{ neofs_http__version }}/neofs-http-gw-linux-amd64'
 
 neofs_http__user: 'neofs-http'
@@ -20,12 +20,12 @@ neofs_http__http_allow: []
 neofs_http__http_group_allow: []
 neofs_http__http_host_allow: []
 
-neofs_http__metrics_enabled: False
-#neofs_http__metrics_address: 'localhost'
-#neofs_http__metrics_port: 5662
-#neofs_http__metrics_allow: []
-#neofs_http__metrics_group_allow: []
-#neofs_http__metrics_host_allow: []
+neofs_http__prometheus_enabled: False
+#neofs_http__prometheus_address: 'localhost'
+#neofs_http__prometheus_port: 5662
+#neofs_http__prometheus_allow: []
+#neofs_http__prometheus_group_allow: []
+#neofs_http__prometheus_host_allow: []
 
 neofs_http__pprof_enabled: False
 #neofs_http__pprof_address: 'localhost'
@@ -34,6 +34,7 @@ neofs_http__pprof_enabled: False
 #neofs_http__pprof_group_allow: []
 #neofs_http__pprof_host_allow: []
 
+neofs_http__pool_error_threshold: 100 # default
 
 neofs_http__raw_config:
   logger:
@@ -43,13 +44,25 @@ neofs_http__raw_config:
     address: '{{ neofs_http__wallet_address }}'
     passphrase: '{{ neofs_http__wallet_password }}'
   listen_address: '{{ neofs_http__http_address }}:{{ neofs_http__http_port }}'
+  pool_error_threshold: '{{ neofs_http__pool_error_threshold }}'
   peers:
     0:
       address: 'localhost:8080'
       priority: 1
       weight: 1
 
-neofs_http__default_config: []
+neofs_http__default_config:
+  - enabled: '{{ neofs_http__pprof_enabled }}'
+    options:
+      pprof:
+        enabled: True
+        address: '{{ neofs_http__pprof_address }}:{{ neofs_http__pprof_port }}'
+  - enabled: '{{ neofs_http__prometheus_enabled }}'
+    options:
+      prometheus:
+        enabled: True
+        address: '{{ neofs_http__prometheus_address }}:{{ neofs_http__prometheus_port }}'
+
 neofs_http__config: []
 neofs_http__group_config: []
 neofs_http__host_config: []
@@ -77,13 +90,13 @@ neofs_http__ferm__dependent_rules:
     rule_state: 'present'
 
   - type: 'accept'
-    name: 'neofs-http{{ neofs_http__instance }}_metrics'
-    dport: [ '{{ neofs_http__metrics_port }}' ]
-    daddr: [ '{{ neofs_http__metrics_address }}' ]
-    saddr: '{{ neofs_http__metrics_allow + neofs_http__metrics_group_allow + neofs_http__metrics_host_allow }}'
+    name: 'neofs-http{{ neofs_http__instance }}_prometheus'
+    dport: [ '{{ neofs_http__prometheus_port }}' ]
+    daddr: [ '{{ neofs_http__prometheus_address }}' ]
+    saddr: '{{ neofs_http__prometheus_allow + neofs_http__prometheus_group_allow + neofs_http__prometheus_host_allow }}'
     protocol: 'tcp'
     role: 'neofs-http-gw'
-    rule_state: "{{ 'present' if neofs_http__metrics_enabled else 'absent' }}"
+    rule_state: "{{ 'present' if neofs_http__prometheus_enabled else 'absent' }}"
 
   - type: 'accept'
     name: 'neofs-http{{ neofs_http__instance }}_pprof'
