--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,8 @@
 neofs_http__version: '0.23.0'
 neofs_http__bin_url: 'https://github.com/nspcc-dev/neofs-http-gw/releases/download/v{{ neofs_http__version }}/neofs-http-gw-linux-amd64'
 
+neofs_http__instance: ''
+
 neofs_http__user: 'neofs-http'
 neofs_http__group: 'neofs-http'
 
