add more variables for templates
Signed-off-by: Sergio Nemirowski <sergio@outerface.net>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,7 +9,7 @@ neofs_http__user: 'neofs-http'
 neofs_http__group: 'neofs-http'
 
 neofs_http__conf_dir: '/etc/neofs/http'
-neofs_http__bin_path: '/usr/bin'
+neofs_http__bin_path: '/usr/bin/neofs-http-gw'
 
 neofs_http__wallet_struct: ''
 neofs_http__wallet_path: '{{ neofs_http__conf_dir }}/wallet.json'
