--- a/tasks/binary.yml
+++ b/tasks/binary.yml
@@ -1,11 +1,17 @@
 ---
 
 - name: Download NeoFS HTTP binary
-  ansible.builtin.get_url:
-    url: '{{ neofs_http__bin_url }}'
-    dest: '{{ neofs_http__bin_path }}/neofs-http-gw'
-    force: yes
-    owner: 'root'
-    group: 'root'
-    mode: '0755'
-  notify: [ 'Restart NeoFS HTTP service' ]
+  ansible.builtin.include_role:
+    name: nspcc.ansible_goodies.github
+  vars:
+    github__org: '{{ neofs_http__github_org }}'
+    github__repo: '{{ neofs_http__github_repo }}'
+    github__version: '{{ neofs_http__version }}'
+    github__asset_name: '{{ neofs_http__github_asset_name }}'
+    github__args:
+      dest: '{{ neofs_http__bin_path }}'
+      owner: 'root'
+      group: 'root'
+      mode: '0755'
+      force: yes
+    github__notify: [ 'Restart NeoFS HTTP service' ]
