add version for ansible-goodies
Signed-off-by: Sergio Nemirowski <sergio@outerface.net>

--- a/meta/requirements.yml
+++ b/meta/requirements.yml
@@ -1,4 +1,5 @@
 ---
 collections:
-- name: https://github.com/nspcc-dev/ansible-goodies
-  type: git
+  - name: https://github.com/nspcc-dev/ansible-goodies
+    type: git
+    version: master
